src/layout/components/header/components/nav-mobile/nav-mobile.module.scss
@use "styles/variables" as *;

.nav {
  position: fixed;
  inset: 0;
  top: $header-height;
  background: white;
  padding-top: 4rem;
  overflow: hidden;

  &.entering {
    animation: show 0.2s ease;
  }

  &.entered {
    opacity: 1;
  }

  &.exiting {
    animation: hide 0.2s ease;
  }

  &.exited {
    display: none;
    opacity: 0;
  }

  @media (min-width: 43.75em /* 700px */) {
    display: none;
  }
}

.links {
  display: flex;
  flex-direction: column;
  max-width: 25rem;
  margin: 0 auto;
  margin-bottom: 1.75rem;
}

.link {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  height: 6rem;
  font-size: 1.3rem;
  color: $color-primary;
  text-decoration: none;
  border-top: 1px solid transparent;
  border-bottom: 1px solid $color-divider;
  transition: all 0.2s ease;

  &.selected {
    color: $color-accent;
    border-bottom: 1px solid $color-accent;
  }

  &:hover {
    color: $color-accent;
  }
}

.icons {
  display: flex;
  align-items: center;
  justify-content: center;
}

.icon {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0.8rem;
  fill: $color-secondary;
  transition: all 0.2s ease;

  &:hover {
    fill: $color-primary;
  }

  > * {
    width: 2rem;
    height: 2rem;
  }
}

@keyframes show {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes hide {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
  }
}

